# d-research-ultra-skill

./: .gitattributes  .gitignore  .lycheeignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  SKILL.md  package-lock.json  package.json  pyproject.toml  research.config.example.json
.github/workflows/: link-check.yml  lint-and-self-test.yml
adapters/: citation-resolver.md  database-readonly.md  fetch-only.md  generic-browser.md  graphql.md  playwright.md  translation.md  web-search-only.md  wikidata.md
agents/: README.md  main-expert-instructions.md  manifest.json  orchestrator.md  spawn-contract.md
agents/subagent-roles/: README.md  data-extractor.md  evidence-verifier.md  (+4 more)
docs/: eval-upgrade-prompt.md  eval.md  release-v3.0.1.md  release-v3.0.2.md  release-v3.0.3.md  release-v3.0.5.md  release-v3.0.6.md  release-v3.1.0.md  release-v3.1.1.md  release-v3.1.2.md
examples/: academic-review.md  api-dataset-collection.md  blocked-source-report.md  dataset-collection.md  large-scale-crawl.md  long-horizon-research-plan.md  scientific-literature-review.md  systematic-review-prisma.md  technical-research.md  usage.md
references/: academic-databases.md  academic-research-protocol.md  anti-bot-fallback.md  api-access-workflow.md  blocker-report.md  browser-first-crawl.md  citation-graph.md  citation-management.md  data-extraction-toolbox.md  data-processing-pipeline.md  data-visualization.md  deduplication.md  evidence-ledger.md  execution-gates.md  extraction-methods.md  fact-verification.md  final-report-template.md  frontier-search.md  http-cache.md  large-scale-collection.md  monitoring-change-detection.md  multi-format-extraction.md  multilingual-research.md  ocr.md  pdf-extraction.md  person-aggregation.md  query-patterns.md  register-and-jargon-expansion.md  report-generation.md  reproducibility-checklist.md  research-bibliography.md  research-intake.md  research-plan-protocol.md  safety-and-access-policy.md  semantic-retrieval.md  social-media-archival.md  source-discovery.md  source-quality-rubric.md  specialized-domains.md  synthesis-patterns.md  (+5 more)
scripts/: api_fetch.mjs  bench_harness_check.py  check_internal_refs.py  check_no_plan_files.py  check_node_syntax.py  check_ultra_contract.py  citation_export.py  citation_graph.py  citation_render.py  citation_resolver.py  data_clean.py  dedup_near.py  embed_corpus.py  evidence_ledger.py  extract_tables.py  generate_test_pdf.py  harvest_terms.py  http_cache.py  multi_extract.py  ocr.py  pdf_extract.py  playwright_crawl.mjs  playwright_extract.mjs  playwright_probe.mjs  report_render.py  research_plan.py  run_dogfood.py  run_metadata.py  run_python.mjs  score_source.py  social_snapshot.py  translate.py  wayback.py  web_search.mjs  wikidata.py
templates/: api-request-log.csv  citation-library.bib  coverage-map.json  data-dictionary.csv  data-package.json  evidence-ledger.csv  frontier-ledger.csv  prisma-flow.json  register-vocab-log.csv  report-template.md  research-plan.json  screening-log.csv  search-log.csv
(+8 files in other folders)
